force-app/main/default/objects/GO_Pricing__mdt/GO_Pricing__mdt.object-meta.xml
<CustomObject>
    <label>Garantie d&apos;origine (Pricing)</label>
    <pluralLabel>Garanties d&apos;origine (Pricing)</pluralLabel>
</CustomObject>