force-app/main/default/objects/GO_Pricing__mdt/fields/MargeMin__c.field-meta.xml
<CustomField>
    <fullName>MargeMin__c</fullName>
    <label>Marge (Min)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>