force-app/main/default/objects/GO_Pricing__mdt/fields/Origine__c.field-meta.xml
<CustomField>
    <fullName>Origine__c</fullName>
    <label>Origine</label>
    <length>55</length>
    <type>Text</type>
</CustomField>