force-app/main/default/objects/GO_Pricing__mdt/fields/PrixGarantieOrigine__c.field-meta.xml
<CustomField>
    <fullName>PrixGarantieOrigine__c</fullName>
    <label>Prix de la garantie d&apos;origine</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>