force-app/main/default/objects/GO_Pricing__mdt/fields/Technologie__c.field-meta.xml
<CustomField>
    <fullName>Technologie__c</fullName>
    <label>Technologie</label>
    <length>155</length>
    <type>Text</type>
</CustomField>